# veget0n

./: pyproject.toml
veget/: __main__.py
veget/linkedin/: __init__.py  experience.py  profile.py  profile_link.py
veget/ui/: __main__.py  console.py  main_window.py  scraping_dialog.py
